--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install Google Fonts
+        run: |
+          wget -O Atkinson_Hyperlegible.zip https://fonts.google.com/download?family=Atkinson%20Hyperlegible
+          unzip -d Atkinson_Hyperlegible/ Atkinson_Hyperlegible.zip
+          mv Atkinson_Hyperlegible /usr/share/fonts/
+          fc-cache -fv
+
       - uses: quarto-dev/quarto-actions/setup@v2
       - run: |
           quarto --version
